--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -1,4 +1,6 @@
 <div class="header-image-profile text-center">
+    <button class="icabutton editprofilebutton">Edit</button>
+
     <img ng-src="{{ user.picture }}">
 
     <h2>{{ user.firstname }} {{ user.lastname }}</h2>
