--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,6 @@
 body {
-    margin-bottom: 200px;
     position: relative;
+    font-family: 'Roboto', sans-serif;
 }
 /**
  * Basic styles
@@ -10,14 +10,58 @@ img {
     height: auto;
 }
 
+.icabutton {
+    border: none;
+    background: #ffd200;
+    padding: 8px 15px;
+    font-size: 14px;
+    box-shadow: 0px 2px 4px #000000;
+    color: #000000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.icabutton:hover,
+.icabutton:focus,
+.icabutton:active {
+    text-decoration: none;
+    color: #000000;
+}
+
 /**
  * Navigation
  */
+.navbar {
+    background: #474748;
+    border-bottom: none;
+}
+
+.navbar-nav > li > a {
+    padding-top: 25px;
+    padding-bottom: 25px;
+    color: #ffffff;
+}
+
+.nav > li > a:hover, 
+.nav > li > a:focus {
+    color: #ffd200;
+    background: none;
+}
+
+.navbar-form {
+    margin-top: 18px;
+}
+
+/*.navbar-form button {
+    border: none;
+    background: #ffd200;
+    padding: 8px 15px;
+    font-size: 14px;
+    box-shadow: 0px 2px 4px #000000;
+}*/
 
 .navbar-brand img {
     height: 40px;
-    margin-top: -15px;
-    margin-bottom: -15px;
 }
 
 /**
@@ -35,6 +79,14 @@ img {
     left: 380px;
 }
 
+.menu-open .project-actions-container {
+    left: 380px;
+}
+
+.menu-open .banner-background .plus-icon-editor {
+    right: 400px;
+}
+ 
 .menu-open .menu-side {
     left: 0;
     padding-top: 60px;
@@ -61,15 +113,113 @@ img {
     z-index: 2000;
 }
 
-.project-actions {
-    position: relative;
+.project-actions-container {
+    position: fixed;
+    top: 70px;
+    left: 0;
+    right: 0;
+    height: 70px;
+    background: #9c9b9a;
     text-align: center;
+    z-index: 1020;
+    -webkit-transition: 0.3s ease;
+    -moz-transition: 0.3s ease;
+    -o-transition: 0.3s ease;
+    -ms-transition: 0.3s ease;
+    transition: 0.3s ease;
+}
+
+.project-actions {
+    margin-top: 15px;
+    position: relative;
+    text-align: center
+}
+
+.project-actions img {
+    max-height: 40px;
+}
+
+.project-actions .layout-button,
+.project-actions > .help {
+    color: #ffffff;
+    font-size: 19px;
+    line-height: 35px;
+}
+
+.project-actions > .help {
+    margin-right: 20px;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.project-actions > button {
+    margin: 0 5px;
+}
+
+.project-actions .layout-button:hover,
+.project-actions .layout-button:focus,
+.project-actions .layout-button:active,
+.project-actions > .help:hover,
+.project-actions > .help:focus,
+.project-actions > .help:active {
+    text-decoration: none;
+    color: #ffd200;
 }
 
 .menu-toggle{
     position: absolute;
     top: 0;
     left: 0;
+}
+
+.menu-toggle-filter {
+    top: 10px;
+}
+
+/**
+ * About page
+ */
+.about-page {
+    height: 100%;
+}
+
+.about-grey,
+.about-yellow {
+    height: 100%;
+    background: #9c9b9a;
+    position: relative;
+}
+
+.about-circle {
+    position: absolute;
+    top: -100px;
+    left: calc(50% - 100px);
+    width: 190px;
+    height: 190px;
+    text-align: center;
+    background: rgba(255,255,255, 0.8);
+    border: 5px solid #ffffff;
+    border-radius: 50%;
+    text-transform: uppercase;
+    font-size: 22px;
+    display: table;
+}
+
+.about-circle > .inner-circle {
+    width: 100%;
+    height: 100%;
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.about-yellow {
+    background: #ffd200;
+}
+
+.about-content {
+    padding: 200px 40px 0 40px;
+    font-size: 16px;
 }
 
 /**
@@ -92,6 +242,10 @@ img {
 .layout {
     position: relative;
     text-align: center;
+}
+
+.layout .plus-icon-editor {
+    right: 25px;
 }
 
 .remove-layout {
@@ -226,46 +380,13 @@ img {
     left: calc(50% - 105px);
 }
 
-/*About page
-*/
-.round-logo-background {
-    position: absolute;
-    left: calc(50% - 100px);
-    margin-top: -120px;
-    background-image: url(http://lorempixel.com/500/300);
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-}
-
-.title {
-    margin-top:60px; 
-}
-
-.inner-image img {
-    margin-top: 145px; 
-    left: calc(50% - 100px);
-    top: calc(100% - 135px);
-}
-
-.inner-text  {
-    margin-top: 50px;
-    padding-right: 125px;
-    padding-left: 125px;
-}
-
-.about-container {
-    margin-top:150px; 
-    border: 1px solid #e7e7e7;
-}
 /**
  * Other stuff
  */
 
 .margin-view {
-    margin-top: 70px;
+    height: 100%;
+    padding-top: 70px;
 }
 
 .firstPlace {
@@ -281,7 +402,6 @@ img {
 }
 
 .unplaced {
-    border: 1px solid black;
     height: 200px;  
     background-color: #d9534f;
 }
@@ -333,7 +453,7 @@ img {
 
 .page-header {
     border: none;
-    margin: 20px auto 0 auto;
+    margin: 70px auto 0 auto;
 }
 
 .header-image {
@@ -343,13 +463,14 @@ img {
 
 .project-title-edit {
     text-align: center;
+    margin-top: 20px;
     font-size: 32px;
 }
 
 .projectsemesterform {
     position: absolute;
     top: 0;
-    right: 0;
+    right: 100px;
 }
 
 #createdcontent .remove-layout,
@@ -364,7 +485,6 @@ img {
     border-left: 1px solid #ddd;
     border-right: 1px solid #ddd;
 }
-
 
 .profileinformation {
     margin-top: 15px;
@@ -404,8 +524,8 @@ img {
 }
 
 .banner-background {
-    background: #eee;
-    padding: 50px 0 110px 0;
+    background: #ffd200;
+    padding: 40px 0 120px 0;
 }
 
 .profile-background,
@@ -416,10 +536,29 @@ img {
     width: 200px;
     height: 200px;
     border-radius: 50%;
+    position: relative;
 }
 
 .logo-background {
     margin: -70px auto 0 auto;
+    background: #ffffff;
+    box-shadow: 0px 1px 2px #000000;
+}
+
+.plus-icon-editor {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    border: 1px solid #000000;
+    border-radius: 50%;
+    background: #ffd200;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    text-align: center;
+    display: inline-block;
+    line-height: 37px;
+    vertical-align: middle;
 }
 
 .image-background,
@@ -487,13 +626,20 @@ img {
 }
 
 .carousel-indicators {
-    background: -moz-linear-gradient(left,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 50%, rgba(0,0,0,0) 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(0,0,0,0)), color-stop(50%,rgba(0,0,0,0.65)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(left,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 50%,rgba(0,0,0,0) 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(left,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 50%,rgba(0,0,0,0) 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(left,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 50%,rgba(0,0,0,0) 100%); /* IE10+ */
-    background: linear-gradient(to right,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 50%,rgba(0,0,0,0) 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#00000000',GradientType=1 ); /* IE6-9 */
+    /*background: -moz-linear-gradient(left,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 50%, rgba(0,0,0,0) 100%); /* FF3.6+ */
+    /*background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(0,0,0,0)), color-stop(50%,rgba(0,0,0,0.65)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
+    /*background: -webkit-linear-gradient(left,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 50%,rgba(0,0,0,0) 100%); /* Chrome10+,Safari5.1+ */
+    /*background: -o-linear-gradient(left,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 50%,rgba(0,0,0,0) 100%); /* Opera 11.10+ */
+    /*background: -ms-linear-gradient(left,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 50%,rgba(0,0,0,0) 100%); /* IE10+ */
+    /*background: linear-gradient(to right,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 50%,rgba(0,0,0,0) 100%); /* W3C */
+    /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#00000000',GradientType=1 ); /* IE6-9 */
+    bottom: 60px;
+}
+
+.arrow-down {
+    position: absolute;
+    bottom: 5px;
+    left: calc(50% - 24px);
 }
 
 .page-info-carousel {
@@ -535,15 +681,17 @@ Student work.
     border-radius: 50%;
     background-color: rgba(255,255,255,0.8);
     border: 5px solid white;
-    left:calc(50% - 100px);
-    top:calc(50% - 110px);
-    padding-top: 80px;
+    left: calc(50% - 110px);
+    top: calc(50% - 110px);
     word-wrap: break-word;
     text-align: center;
 }
 
 .page-info > h3 {
+    margin: 0;
+    font-size: 19px;
     color:#252525;
+    line-height: 200px;
     text-align: center;
 }
 
@@ -584,3 +732,159 @@ votes
     font-size: 1em;
     color:red;
 }
+
+/**
+ * Admin
+ */
+.search-button {
+    margin-left: -23px;
+    padding-left: 17px;
+}
+
+/**
+ * Profiles and semesters
+ */
+.profilecolor {
+    margin: 10px 0 10px 10px;
+    width: 20%;
+    padding-left: 20px;
+    float: left;
+    font-size: 19px;
+    position: relative;
+}
+
+.profilecolor span {
+    position: absolute;
+    top: 8px;
+    left: -10px;
+    display: block;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+
+.profilecolor .i {
+    background: #cf2a27;
+}
+
+.profilecolor .cmd {
+    background: #ff9900;
+}
+
+.profilecolor .bim {
+    background: #009e0f;
+}
+
+.profilecolor .ti {
+    background: #2b78e4;
+}
+
+.profileslist a {
+    display: block;
+    width: 20%;
+    float: left;
+    margin: 80px auto;
+}
+
+.profileslist a:hover,
+.profileslist a:active, 
+.profileslist a:focus {
+    text-decoration: none;
+}
+
+.profile-circle {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    border: 3px solid green;
+    font-size: 19px;
+    text-align: center;
+    color: #474748;
+    display: table;
+}
+
+.profile-circle > .inner-circle {
+    width: 100%;
+    height: 100%;
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.profile1 {
+    border-color: #009e0f;
+}
+
+.profile2 {
+    border-color: #ff9900;
+}
+
+.profile3 {
+    border-color: #cf2a27;
+}
+
+.profile4 {
+    border-color: #2b78e4;
+}
+
+.semestertitle {
+    background: #ffd200;
+    text-transform: uppercase;
+    padding: 100px 0 150px 0;
+    font-size: 35px;
+    text-align: center;
+}
+
+/**
+ * Filters
+ */
+#place_pages .menu-side {
+    background: #9c9b9a;
+    padding: 100px 30px 30px 30px;
+    font-size: 16px;
+}
+
+#place_pages .menu-side-title {
+    font-size: 24px;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+}
+
+#place_pages .menu-side-subtitle {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+#place_pages .menu-side #projects {
+    margin-bottom: 30px;
+}
+
+#place_pages .menu-side .customfield {
+    width: 100%;
+    display: block;
+    margin-bottom: 5px;
+}
+
+#place_pages .menu-side .customfield label {
+    width: 125px;
+}
+
+#place_pages .menu-side .customfield input,
+#place_pages .menu-side .customfield select {
+    width: 190px;
+}
+
+/**
+ * User profile
+ */
+.header-image-profile {
+    position: relative;
+}
+
+.header-image-profile .editprofilebutton {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
