--- a/public/views/about.html
+++ b/public/views/about.html
@@ -1,8 +1,52 @@
-<div class="text-center title">
-    <h1>About</h1>
+<div class="row full-row about-page">
+
+    <img src="/images/hanabout.jpg">
+
+    <div class="col-xs-12 col-sm-4 about-grey">
+        
+        <div class="about-circle">
+            <div class="inner-circle">
+                HAN
+            </div>
+        </div>
+
+        <div class="about-content">
+            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        </div>
+
+    </div>
+
+    <div class="col-xs-12 col-sm-4 about-yellow">
+
+        <div class="about-circle">
+            <div class="inner-circle">
+                ICA
+            </div>
+        </div>
+
+        <div class="about-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+
+    </div>
+
+    <div class="col-xs-12 col-sm-4 about-grey">
+
+        <div class="about-circle">
+            <div class="inner-circle">
+                ICA PRESENTS
+            </div>
+        </div>
+
+        <div class="about-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+
+    </div>
+
 </div>
-<div class="row full-row">
-    <div class="col-sm-4 text-center about-container">
+
+   <!--  <div class="col-sm-4 about-container about-grey">
         <div class="round-logo-background">
         </div>
         <div class="inner-image">
@@ -13,7 +57,7 @@
             <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
         </div>
     </div>
-    <div class="col-sm-4 text-center about-container">
+    <div class="col-sm-4 about-container about-yellow">
         <div class="round-logo-background">
         </div>
         <div class="inner-image">
@@ -24,7 +68,7 @@
             <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
         </div>
     </div>
-    <div class="col-sm-4 text-center about-container">
+    <div class="col-sm-4 about-container about-grey">
         <div class="round-logo-background">
         </div>
         <div class="inner-image">
@@ -35,4 +79,4 @@
             <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
         </div>
     </div>
-</div>
+</div> -->
