--- a/public/views/index.html
+++ b/public/views/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/angular_material/0.6.1/angular-material.min.css">
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro|Cabin|Kameron|Droid+Serif|Roboto|Roboto+Slab|Raleway" type="text/css">
         <link rel="stylesheet" href="../css/froala_editor.min.css">
         <link rel="stylesheet" href="../css/froala_style.min.css">
         <link rel="stylesheet" href="../css/froala_content.min.css">
@@ -18,6 +19,7 @@
         <script src="/modules/core.js"></script>    
         <script src="/modules/growl.js"></script>
         <script src="/factories/httpInterceptor.js"></script>
+        <script src="/services/smoothscroll.js"></script>
         <script src="/controllers/admin.js"></script>
         <script src="/controllers/footer.js"></script>
         <script src="/controllers/home.js"></script>
@@ -31,7 +33,89 @@
 
     <body class="menu">
 
-        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="modal fade" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="registerModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <form ng-submit="signup()" ng-controller="SignupForm">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                            <h4 class="modal-title" id="registerModalLabel">Register</h4>
+                        </div>
+                        <div class="modal-body">
+                            <div growl></div>
+
+                            <div class="form-group">
+                                <label for="firstname">Firstname</label>
+                                <input type="text" id="firstname" class="form-control" ng-model="formData.firstname" required>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="lastname">Lastname</label>
+                                <input type="text" id="lastname" class="form-control" ng-model="formData.lastname" required>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="profile">Profile</label>
+                                <select class="form-control" ng-model="formData.profileid" id="profile" required>
+                                    <option ng-repeat="profile in profiles" value="{{ profile._id }}">{{ profile.name }}</option>
+                                </select>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="studentnumber">Studentnumber</label>
+                                <input type="text" id="studentnumber" class="form-control" ng-model="formData.studentnumber" required>
+                            </div>
+
+                            <div class="form-group">
+                                <label>Email</label>
+                                <input type="email" class="form-control" ng-model="formData.email" required>
+                            </div>
+
+                            <div class="form-group">
+                                <label>Password</label>
+                                <input type="password" class="form-control" ng-model="formData.password" required>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                            <button registeruser type="submit" id="register-user" class="btn btn-warning">Register</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <form ng-submit="login()" ng-controller="LoginForm">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                            <h4 class="modal-title" id="registerModalLabel">Login</h4>
+                        </div>
+                        <div class="modal-body">
+                            <div growl></div>
+                            
+                            <div class="form-group">
+                                <label>Email</label>
+                                <input type="text" class="form-control" ng-model="email">
+                            </div>
+                            
+                            <div class="form-group">
+                                <label>Password</label>
+                                <input type="password" class="form-control" ng-model="password">
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-warning">Login</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <nav class="navbar navbar-fixed-top" role="navigation">
             <div class="container-fluid">          
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -54,13 +138,13 @@
         
                     <ul class="nav navbar-nav navbar-right">
                         <form action="/addproject" class="navbar-form navbar-left" role="search">
-                            <button type="submit" class="btn btn-default">Add Project</button>
+                            <button class="icabutton" type="submit">Add Project</button>
                         </form>
 
-                        <li ng-hide="$root.loggedin"><a href="/signup">Register</a></li>
-                        <li ng-hide="$root.loggedin"><a href="/login">Login</a></li>
+                        <li ng-hide="$root.loggedin"><a data-toggle="modal" data-target="#registerModal">Register</a></li>
+                        <li ng-hide="$root.loggedin"><a data-toggle="modal" data-target="#loginModal">Login</a></li>
 
-                        <li ng-show="$root.loggedin" class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                        <li ng-show="$root.loggedin" class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{ $root.user.firstname }} <span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="/profile">My profile</a></li>
                                 <li><a href="/editprofile">Edit portfolio</a></li>
@@ -77,7 +161,7 @@
 
         </div>
 
-        <footer class="footer" ng-controller="FooterController">
+        <!-- <footer class="footer" ng-controller="FooterController">
             <div class="container">
                 <div class="col-sm-4">                    
                     <div class="row">
@@ -97,7 +181,7 @@
                     <h3><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><span class="fa fa-facebook"></span></a></h3>
                 </div>              
             </div>
-        </footer>
+        </footer> -->
 
         <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
