Footer fix + about content
Fixed the footer using a wrapper, and added content to the about page

--- a/public/views/about.html
+++ b/public/views/about.html
@@ -11,7 +11,8 @@
         </div>
 
         <div class="about-content">
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+            <p>HAN University of Applied Sciences offer almost every type of professional course related to the following domains: education, social studies, commerce, communications, business administration, law, economics, engineering, built environment, applied sciences, IT, health, nursing and sports and exercise.</p>
+            <p><a href="http://www.han.nl/">www.han.nl</a></p>
         </div>
 
     </div>
@@ -25,9 +26,9 @@
         </div>
 
         <div class="about-content">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <p>Informatica Communications Academy (ICA) provids the HBO course and graduate programs at HAN University of Applied Sciences in the field of computer science, digital media and communications.</p>
+            <p><a href="http://www.han.nl/gebied/informatica-media-communicatie/">www.han.nl/gebied/informatica-media-communication/</a></p>   
         </div>
-
     </div>
 
     <div class="col-xs-12 col-sm-4 about-grey">
@@ -39,7 +40,8 @@
         </div>
 
         <div class="about-content">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <p>ICA PRESENTS is a juried show that is done through the ICA department at the HAN. Students can submit and present their current semester projecs for a chance to win money.</p>
+            <p><a href="http://www.icapresents.nl/">www.icaprestents.nl</a></p> 
         </div>
 
     </div>
