--- a/public/views/index.html
+++ b/public/views/index.html
@@ -46,12 +46,12 @@
 
                             <div class="form-group">
                                 <label for="firstname">Firstname</label>
-                                <input type="text" id="firstname" class="form-control" ng-model="formData.firstname" required>
+                                <input type="text" id="firstname" class="form-control" ng-model="formData.firstname" required placeholder="John">
                             </div>
 
                             <div class="form-group">
                                 <label for="lastname">Lastname</label>
-                                <input type="text" id="lastname" class="form-control" ng-model="formData.lastname" required>
+                                <input type="text" id="lastname" class="form-control" ng-model="formData.lastname" required placeholder="Doe">
                             </div>
 
                             <div class="form-group">
@@ -68,7 +68,11 @@
 
                             <div class="form-group">
                                 <label>Email</label>
-                                <input type="email" class="form-control" ng-model="formData.email" required>
+                                    <div class="input-group">
+                                        <input type="email" class="form-control" ng-model="formData.email" required>
+                                        <div class="input-group-addon">@student.han.nl</div>
+                                    </div>
+                                
                             </div>
 
                             <div class="form-group">
@@ -157,12 +161,13 @@
             </div><!-- /.container-fluid -->
         </nav>
 
+    <div class="wrap">
         <div class="margin-view" ng-view>
-
+    </div>
         </div>
 
-        <!-- <footer class="footer" ng-controller="FooterController">
-            <div class="container">
+         <footer class="footer" ng-controller="FooterController">
+            <div>
                 <div class="col-sm-4">                    
                     <div class="row">
                         <div class="col-sm-8 col-sm-offset-4">
@@ -181,7 +186,7 @@
                     <h3><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><span class="fa fa-facebook"></span></a></h3>
                 </div>              
             </div>
-        </footer> -->
+        </footer> 
 
         <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
