--- a/public/views/addproject.html
+++ b/public/views/addproject.html
@@ -135,10 +135,10 @@
 <div class="project-actions-container">
     
     <div class="project-actions">
-        <a menuside href="#" class="menu-toggle layout-button"><img src="/images/arrow-left.png"> Layout Options</a>
+        <a menuside href="#" class="menu-toggle layout-button"><img src="/images/arrow-left.png">Layout Options</a>
         
         <button saveproject id="save-project" class="save-project icabutton">Save Project</button>
-        <button id="delete-project" class="delete-project icabutton">Delete Project</button>
+        <form style="display: inline-block;" action="/profile"><button type="submit" class="delete-project icabutton">Delete Project</button></form>
 
         <div class="form-group projectsemesterform">
 
