--- a/public/views/editproject.html
+++ b/public/views/editproject.html
@@ -138,7 +138,7 @@
         <a menuside href="#" class="menu-toggle layout-button"><img src="/images/arrow-left.png"> Layout Options</a>
         
         <button saveeditproject id="save-project" class="save-project icabutton">Save Project</button>
-        <button id="delete-project" class="delete-project icabutton">Delete Project</button>
+        <button deleteeditproject id="delete-project" class="delete-project icabutton">Delete Project</button>
 
         <div class="form-group projectsemesterform">
 
