--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -1,5 +1,5 @@
 <div class="header-image-profile text-center">
-    <button class="icabutton editprofilebutton">Edit</button>
+    <form action="/editprofile"><button type="submit" class="icabutton editprofilebutton">Edit</button></form>
 
     <img ng-src="{{ user.picture }}">
 
