--- a/public/views/editprofile.html
+++ b/public/views/editprofile.html
@@ -31,7 +31,7 @@
 <div class="profileinformation clearfix text-center">
 
     <div ng-show="user.picture" data-toggle="modal" data-target="#imageModal" class="image select-image"><img ng-src="{{ user.picture }}"></div>
-
+ 
     <div ng-hide="user.picture" data-toggle="modal" data-target="#imageModal" class="image select-image"><div class="profile-background"><i class="fa fa-picture-o"></i></div></div>
 
     <div class="col-xs-4 col-xs-offset-4 text-left form-margin">
@@ -50,8 +50,8 @@
         <div class="col-xs-12">
             <div class="form-group">
                 <label for="profile">Profile</label>
-                <select class="form-control" ng-model="user.profileid" id="profile" required>
-                    <option ng-repeat="profile in profiles" value="{{ profile._id }}">{{ profile.name }}</option>
+                <select class="form-control select-profile" ng-model="user.profileid" id="profile" required>
+                    <option ng-selected="{{ user.profileid == profile._id }}" ng-repeat="profile in profiles" value="{{ profile._id }}">{{ profile.name }}</option>
                 </select>
             </div>
         </div>
