--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -587,8 +587,8 @@ img {
 
 .slide-student {
     position: absolute!important;
-    top:10%;
     left:0;
+    margin-top: 115px;
     -webkit-transition:all ease 1.5s;
     transition:all ease 1.5s;
     height:300px;
@@ -839,6 +839,10 @@ votes
 /**
  * Filters
  */
+#place_pages {
+    height:600px;
+}
+
 #place_pages .menu-side {
     background: #9c9b9a;
     padding: 100px 30px 30px 30px;
