--- a/public/views/index.html
+++ b/public/views/index.html
@@ -67,12 +67,8 @@
                             </div>
 
                             <div class="form-group">
-                                <label>Email</label>
-                                    <div class="input-group">
-                                        <input type="email" class="form-control" ng-model="formData.email" required>
-                                        <div class="input-group-addon">@student.han.nl</div>
-                                    </div>
-                                
+                                <label for="email">Email</label>
+                                <input type="email" id="email" class="form-control" ng-model="formData.email" required placeholder="johndoe@student.han.nl">
                             </div>
 
                             <div class="form-group">
@@ -102,17 +98,17 @@
                             
                             <div class="form-group">
                                 <label>Email</label>
-                                <input type="text" class="form-control" ng-model="email">
+                                <input type="text" class="form-control" ng-model="formData.email" required>
                             </div>
                             
                             <div class="form-group">
                                 <label>Password</label>
-                                <input type="password" class="form-control" ng-model="password">
+                                <input type="password" class="form-control" ng-model="formData.password" required>
                             </div>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                            <button type="submit" class="btn btn-warning">Login</button>
+                            <button loginuser id="login-user" type="submit" class="btn btn-warning">Login</button>
                         </div>
                     </form>
                 </div>
