--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -33,6 +33,12 @@ img {
     box-shadow: 0px 1px 2px #000000;
 }
 
+.modal-footer .icabutton,
+.modal-footer .icabutton {
+    margin: 0 auto;
+    display: block;
+}
+
 /**
  * Navigation
  */
@@ -726,31 +732,33 @@ Student work.
 
 }
 
-.page-info{
+.page-info {
     position: absolute;
-    height:200px;
-    width:200px;
+    height: 200px;
+    width: 200px;
     border-radius: 50%;
     background-color: rgba(255,255,255,0.8);
     border: 5px solid white;
     left: calc(50% - 110px);
     top: calc(50% - 110px);
-    word-wrap: break-word;
     text-align: center;
+    display: table;
+    font-size: 16px;
+    word-break: break-word;
 }
 
-.page-info > h3 {
-    margin: 0;
-    font-size: 19px;
-    color:#252525;
-    line-height: 200px;
-    text-align: center;
+.page-info > .inner-circle {
+    width: 100%;
+    height: 100%;
+    display: table-cell;
+    vertical-align: middle;
 }
 
 .view-more {
     display: table;
     margin: 0 auto;
     margin-top: 50px;
+    margin-bottom: 30px;
 }
 
 #slider1_container, #slides {
@@ -763,25 +771,22 @@ votes
  */
 
 .visibility-of-votes {
-    visibility:hidden;
+    display: none;
     opacity:0;
-    transition:all 0s linear 0.2s,opacity 0.1s linear;
-    font-size: 2em;
 }
 
-.unplaced:hover .visibility-of-votes{
-    margin-top: -45px;
-    visibility:visible;
-    opacity:1;
-    transition-delay:0s;
+.unplaced:hover .visibility-of-votes {
+    font-size: 32px;
+    opacity: 1;
 }
 
-.unplaced:hover .visibility-of-title{
-    visibility:hidden;
+.unplaced:hover .visibility-of-title {
+    font-size: 16px;
+    word-break: break-word;
+    display: none;
 }
 
 .visibility-of-votes > i {
-    font-size: 1em;
     color:red;
 }
 
@@ -943,5 +948,17 @@ votes
     top: 10px;
     left: 10px;
     background: #9c9b9a;
+}
+
+.popuplogo {
+    margin: 0 auto 20px auto;
+    width: 100px;
+    height: auto;
+    display: block;
+}
+
+.help-info {
+    padding: 0 20px 20px 20px;
+    font-size: 16px;
 }
 
