--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,7 +1,7 @@
 <div id="Carousel" class="carousel slide">
     <ol class="carousel-indicators">
         <li ng-repeat="project in projects | limitTo:3  track by $index" data-target="Carousel" data-slide-to="{{ $index }}" ng-class="{active : $first}"></li>
-    </ol>
+    </ol>    
 
     <div id="carousel-style" class="carousel-inner">
         <div class="item" ng-repeat="project in projects | limitTo:3 track by $index" ng-class="{active : $first}">
@@ -30,10 +30,13 @@
         <div class="col-xs-12 col-md-4" ng-show="$index == 0 || $index > 0">
             <a href="/project/{{project._id}}">
                 <div class="unplaced" style="background: url({{ project.banner }}) center center no-repeat; background-size:cover;">
-<!--                <img src=" {{ project.banner }} " alt="banner"> -->
                     <div class="page-info" >
-                        <h3>{{ project.title }}</h3>
-                        <p class="visibility-of-votes">{{ project.votes }}</p>
+                        <div class="visibility-of-title inner-circle">
+                            {{ project.title }}  
+                        </div>
+                        <div class="visibility-of-votes inner-circle">
+                            <i class="fa fa-heart"></i> {{ project.votes }}
+                        </div>
                     </div>
                 </div>
             </a>
@@ -42,8 +45,8 @@
 </div>
 
 <div class="view-more">
-    <a href="/projects">
-        <button type="button" class="btn btn-default btn-lg">VIEW MORE</button>
-    </a>
+    <form action="/projects">
+        <button type="submit" class="icabutton">VIEW MORE</button>
+    </form>
 </div>
 
