--- a/public/views/index.html
+++ b/public/views/index.html
@@ -125,7 +125,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="/">Home <span class="sr-only">(current)</span></a></li>
                         <li><a href="/projects">Student Work</a></li>
-                        <li><a href="/profiles">Profiles</a></li>
+                        <li><a href="/profiles">Cources</a></li>
                         <li><a href="/about">About</a></li>
                     </ul>
         
@@ -139,8 +139,8 @@
 
                         <li ng-show="$root.loggedin" class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span ng-show="$root.user.picture" style="background-image: url('{{ $root.user.picture }}');"></span><span ng-hide="$root.user.picture" style="background-image: url('/images/silhouette.png');"></span></a>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a href="/profile">My profile</a></li>
-                                <li><a href="/editprofile">Edit portfolio</a></li>
+                                <li><a href="/profile">My Portfolio</a></li>
+                                <li><a href="/editprofile">Edit Portfolio</a></li>
                                 <li ng-show="$root.user.role == 'admin'"><a href="/admin">Admin panel</a></li>
                                 <li><a logout href="">Logout</a></li>
                             </ul>
